# comfyui-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: dev-task.md
.github/workflows/: ci.yml
docs/: API.md  COMFYUI_API.md  CONFIGURATION.md  MCP_TOOLS.md  WORKFLOW_TEMPLATES.md  WORKFLOW_TUTORIAL.md
epics/: phase1-foundation.md
examples/: README.md
examples/config/: .env.example  comfyui.advanced.toml  comfyui.dev.toml  comfyui.docker.toml  comfyui.example.toml  comfyui.minimal.toml  comfyui.prod.toml  comfyui.test.toml
examples/mcp/: README.md  basic.mcp.json  custom-templates.mcp.json  development.mcp.json  docker.mcp.json  multi-server.mcp.json  production.mcp.json  windows.mcp.json
schemas/: workflow-template.schema.json
src/comfyui_mcp/: __init__.py  cli.py  comfyui_client.py  config.py  exceptions.py  image_generator.py  models.py  retry.py  server.py  template_manager.py
tests/: __init__.py  test_cli.py  test_comfyui_client.py  test_config_env.py  test_config_file_loader.py  test_config_validation.py  test_exceptions.py  test_image_generator.py  test_logging_integration.py  test_models.py  test_parameter_substitution.py  test_retry.py  test_server.py  test_template_manager.py  test_workflow_template_format.py
workflows/: README.md  character-portrait.json  item-icon.json
